# mega

./: Cargo.toml  README.md
.github/workflows/: base.yml  codeql.yml  gha-cache-smoke.yml  mono-engine-deploy.yml  orion-release.yml  orion-scheduler-release.yml  orion-server-deploy.yml  release.yml  services.yml  web-deploy.yml  web-sync-server-deploy.yml  web-test.yml
ceres/src/bus/: event.rs
ceres/src/merge_checker/: mod.rs
ceres/src/model/: admin.rs  change_list.rs  git.rs  mod.rs  orion_runner.rs  user.rs  webhook.rs
ci/jenkins/mega-ui/: Jenkinsfile
ci/jenkins/mono-engine/: Jenkinsfile
ci/jenkins/orion-server/: Jenkinsfile
ci/jenkins/web-sync-server/: Jenkinsfile
clients/orion-scheduler-client/: Cargo.toml
clients/orion-scheduler-client/src/: http_client.rs  lib.rs
common/src/config/: mod.rs
config/: config.toml
docker/demo/: .env.example  docker-compose.demo.yml
docker/deployment/: .env.example
docs/: architecture.md  development.md
jupiter-migrate/: Cargo.toml  README.md
jupiter-migrate/src/migration/: m20250314_025943_init.rs  m20250613_033821_alter_user_id.rs  m20250618_065050_add_label.rs  m20250702_072055_add_item_assignees.rs  m20250804_151214_alter_builds_end_at.rs  m20250812_022434_alter_mega_mr.rs  m20250819_025231_alter_builds.rs  m20250821_083749_add_checks.rs  m20250903_071928_add_issue_refs.rs  m20250904_120000_add_commit_auths.rs  m20251021_073817_rename_mr_sync_to_cl_sync.rs  m20251109_073000_add_merge_queue.rs  m20251119_145041_add_draft_status.rs  m20251125_135032_add_draft_conv_type.rs  m20251203_013745_add_dynamic_sidebar.rs  m20260108_105158_remove_storage_type_enum.rs  m20260115_000000_create_targets_table.rs  m20260119_060233_add_mega_code_review.rs  m20260128_080549_add_mega_code_review_anchor_and_position.rs  m20260209_064016_remove_default_dynamic_sidebar.rs  m20260211_102158_add_username_to_mega_cl_sqlite.rs  m20260216_013852_create_group_permission_tables.rs  m20260224_142019_create_target_build_status.rs  m20260302_082846_add_cla_sign_status.rs  m20260304_013434_seed_cla_sign_check_config.rs  m20260306_121829_create_bots_related_table.rs  m20260714_021900_create_user_approval_status.rs  m20260720_060000_rename_webhook_event_type_underscores.rs  m20260723_080000_cla_sign_check_not_required.rs  mod.rs  runner.rs
jupiter/callisto/src/: access_token.rs  artifact_objects.rs  artifact_set_files.rs  artifact_sets.rs  audit_logs.rs  bot_installations.rs  bot_keys.rs  bot_tokens.rs  bots.rs  buck_session.rs  buck_session_file.rs  build_events.rs  build_targets.rs  build_triggers.rs  check_result.rs  cla_sign_status.rs  commit_auths.rs  dynamic_sidebar.rs  email_jobs.rs  git_blob.rs  git_commit.rs  git_issue.rs  git_pr.rs  git_repo.rs  git_tag.rs  git_tree.rs  gpg_key.rs  import_refs.rs  issue_cl_references.rs  item_assignees.rs  item_labels.rs  label.rs  lfs_locks.rs  lfs_objects.rs  mega_blob.rs  mega_cl.rs  mega_cl_commits.rs  mega_cl_reviewer.rs  mega_code_review_anchor.rs  mega_code_review_comment.rs  (+32 more)
jupiter/src/: tests.rs
jupiter/src/service/: webhook_service.rs
jupiter/src/storage/: artifact_storage.rs  cl_storage.rs  gpg_storage.rs  init.rs  mod.rs  mono_storage.rs  user_approval_storage.rs
mono/: Cargo.toml  Dockerfile
mono/src/api/: api_doc.rs  api_router.rs  mod.rs
mono/src/git_protocol/: ssh.rs
mono/src/server/: http_server.rs  ssh_server.rs
mono/tests/: campsite_api_store_tests.rs  login_user_extractor_tests.rs
moon/: pnpm-workspace.yaml
moon/api/: README.md
moon/script/: gen-client
orion-scheduler/: Cargo.toml  DESIGN.md  README.md  TESTING.md  target_config.json.template
orion-scheduler/src/: config.rs  handlers.rs  main.rs  orion_deployer.rs  state.rs  vm_cleanup.rs
orion-server/: Dockerfile
orion-server/src/: api.rs  scheduler.rs
orion/runner-config/: cleanup.sh
orion/src/: antares.rs  buck_controller.rs  disk.rs  lib.rs  main.rs  ws.rs
saturn/: Cargo.toml  mega.cedarschema  mega_policies.cedar
saturn/src/: entitystore.rs  lib.rs  objects.rs  reviewer_parser.rs
scripts/demo/: build-demo-images-local.sh
scripts/init_mega/: README.md  init_mega.py
tmp/gha-cache-smoke/: Dockerfile  hello.txt
(+79 files in other folders)
